--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.10.0",
-    "style-loader": "^3.3.4",
+    "html-webpack-plugin": "^5.6.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
